third_party/move/move-compiler-v2/tests/lambda/inline-parity/dotdot_valid.exp

Diagnostics:
error: Only inline functions may have function-typed parameters, but non-inline function `test::lambda_param` has a function parameter:
    ┌─ tests/lambda/inline-parity/dotdot_valid.move:175:9
    │
175 │     fun lambda_param(f: |S2| bool): bool {
    │         ^^^^^^^^^^^^ - Parameter `f` has function-valued type `|S2|bool`.
